culture feat added

--- a/gamerules/GameRuleMenu.html
+++ b/gamerules/GameRuleMenu.html
@@ -42,6 +42,9 @@
 <h4 class="articlesubtitle"><a href="EyomBanedSpells.html">Banned Spells</a></h4>
 <p>A full list of all Pathfinder spells which do not work in Eyom due to the specific nature of the setting. Each spell's reason for being banned is listed to allow GMs to ensure third party supplments can be used in keeping with Eyom's setting.</p>
 
+<h4 class="articlesubtitle"><a href="culturefeats.html">Culture Feats</a></h4>
+<p>Lists of feats for PCs based on their cultures of orgin intended to supplement or serve as background feats durring character creation.</p>
+
 <h4 class="articlesubtitle"><a href="EyomReccomendedRules.html">Reccomended Rules</a></h4>
 <p>A list of alternate rule systems which are reccomended for use with the setting.</p>
 
