--- a/misc/Calander.html
+++ b/misc/Calander.html
@@ -72,7 +72,7 @@
    		 </ol>
    	 <li><i>Full Sowing</i></li>
    		 <ol style="list-style-type: none;">
-   			 <li>Those who come of age in Full Harvest gain one of the abilities commonly referred to as <a href="https://www.d20pfsrd.com/classes/base-classes/Vigilante/#TOC-Vigilante-Specialization-Ex-">Vigilante Talents</a>. They often become adventurers.</li>
+   			 <li>Those who come of age in Full Harvest gain one of the abilities commonly referred to as <a href="https://www.d20pfsrd.com/classes/base-classes/witch/hexes/hexes/">Hexes</a>. They often become mystics.</li>
    		 </ol>
    	 <li><i>Halfharvest</i></li>
    	 <ol style="list-style-type: none;">
@@ -100,19 +100,19 @@
    	 <br>
    		 <li><i>Gentlesun</i></li>
    	 <ol style="list-style-type: none;">
-   		 <li>Those who come of age during Gentlesun are swifter than most, and can navigate through / over exceptionaly rough terrain and even through magical effects <a href="https://www.d20pfsrd.com/magic/all-spells/f/freedom-of-movement/">without being slowed or hindered</a>, though this will tire them after a few minutes.</li>
+   		 <li>Those who come of age during Gentlesun are swifter than most (+10 move speed, all types), and can navigate through / over exceptionaly rough terrain and even through magical effects <a href="https://www.d20pfsrd.com/magic/all-spells/f/freedom-of-movement/">without being slowed or hindered</a>, though this will tire them after a few minutes.</li>
    	 </ol>
    	 <li><i>Highsun</i></li>
    	 <ol style="list-style-type: none;">
-   		 <li>Those who come of age in Highsun magically gain the mental and physical knowledge to preform one of the many <a href="https://www.d20pfsrd.com/feats/combat-feats/">martial techniques</a>.</li>
+   		 <li>Those who come of age in Highsun magically gain the mental and physical knowledge to preform one of the many <a href="https://www.d20pfsrd.com/feats/combat-feats/">martial techniques</a>, and react faster to danger (+4 to inishative).</li>
    	 </ol>
    	 <li><i>Longwheat</i></li>
    	 <ol style="list-style-type: none;">
-   		 <li>Those who come of age in Longwheat magically gain the mental and physical knowledge necessary to work with others in a specific <a href="https://www.d20pfsrd.com/feats/teamwork-feats/">taticaly usefull</a> way.</li>
+   		 <li>Those who come of age in Longwheat magically gain the mental and physical knowledge necessary to work with others in a specific <a href="https://www.d20pfsrd.com/feats/teamwork-feats/">taticaly usefull</a> way, and are more effective at helping others with tasks (+2 to aid other checks).</li>
    	 </ol>
    	 <li><i>Toolmend</i></li>
    	 <ol style="list-style-type: none;">
-   		 <li>Those who come of age in Toolmend gain the extrordianry to <a href="https://www.d20pfsrd.com/magic/all-spells/m/make-whole/">fix absolutly anything</a>, given the time needed to do so. This ability is not magical, but does seem to grant the knowledge needed to make the repair and induce a trance-like state. Once finished, the individual is exceptionally tired and hungry.</li>
+   		 <li>Those who come of age in Toolmend gain the extrordianry ability to <a href="https://www.d20pfsrd.com/magic/all-spells/m/make-whole/">fix absolutly anything</a>, given the time needed to do so. This ability is not magical, but does seem to grant the knowledge needed to make the repair and induce a trance-like state. Once finished, the individual is exceptionally tired and hungry. They are also capable of repairing small objects far more easily posessing an extrordinary ability simmilar to "Mending".</li>
    	 </ol>
     </ol>
 </ol>
