--- a/gamerules/culturefeats.html
+++ b/gamerules/culturefeats.html
@@ -9,7 +9,7 @@
 </head><script src="../scripts/darkmode.js"></script>
 <body>
 <div>
-<script src="../nav.js"></script>
+<script src="../nav3.js"></script>
 </div>
 <br>
 <div class="book" >
