--- a/stories/maevesdiary.html
+++ b/stories/maevesdiary.html
@@ -57,9 +57,8 @@
   <li><a href="#Month1">Fullharvest</a> </li>
     <ol class="nested">
       <li><a href="#Day1">Entry 1</a></li>
+      <li><a href="#Day2">Entry 2</a></li>
     </ol>
-
-
 </ol>
 </div>
 
@@ -145,6 +144,45 @@
       <p>I set up my tree platform and put up my Expedition Pavilion on top of it. We'll be bunking around here for at least 6 months, so it was worth the effort.</p>
     </div>
   </div>
+
+
+
+<div class="journal">
+    <div class="notepage">
+    <h4 id="Day2">Dear Diary,</h4>
+  	<p><b>Frostfall 1-2 2000</b>. So it's been like a <i>month</i>, sorry. There's been a lot to do. Today the team decided I would be a part of their band concert thing. I guess I owe them one for fixing my ears so I'm doing the thing even though I don't really want to leave the camp empty... Maybe I can buy some construct guards. Not like, Constructis. Just lil hekc'n gud beep boopers.</p>
+  	<p>We ran into an elemental on the way over, and it seemed to have some kind of problem with beavers. I'm glad everyone stopped to talk to it instead of just shooting. 9/10 times the monster is just an animal. Unless you made it the upset.</p>
+  	<p>Anyways the elemental was being possessed by a shadow or something? I'm not sure. I waited in the boat so we could keep going to the concert. I don't have ADHD. I think that might make it hard to fit in with the team. I'm hoping we can be friends and it would suck if we can't because I pay too much attention to the main goal of the day.</p>
+  	<p>Maybe I could find them all some guanfacine? I could probably get Salley to tell me where she gets hers.</p>
+  	<p>It felt good to help tho. Also some beavers made a shrine to Numerical String. That was kind of odd.</p>
+  	<p>We got to the place for the concert a bit after that. Everyone liked it. It's this big old shrine/temple looking building. Very fancy. Super not my thing, but I guess I get why other people would like it. Personally, I'd have plated it in chrome or colored glass so it's shiny. Though that might have been expensive because the place was built for very big people.</p>
+  	<p>Not fat people. Like, the tall ones.</p>
+  	<p>Except the people living there were normal sized. So it felt like a doll house. Specifically like the one Sally had where she "accidently" animated her dolls. They didn't talk. The people living in the temple. Not Sally's dolls. Those did talk.</p>
+  	<p>Shovel didn't like being in the temple, so I told it to not be an idiot and over think things. If bad stuff happens, we kill it. NBD.</p>
+  	<p>We started playing and I think that we were hired to make some dolls dance. Weird, but rich people buy lots of weird stuff so, you know? Like I know this one rich lady who bought a special cabinet to put her clothes in. Why? Are you naked that much?</p>
+  	<p>There wasn't an audience or anything, so we probably just helped some rich person with finding wank material. Kinda weird they didn't just like, ask for sex. But whatever.</p>
+  	<p>Anyways, we were hired by some big monster lady I guess. She was pretty! I'll bet she's not looking for a top though. She had the top energy. So I just stayed quiet and didn't say hi.</p>
+  	<p>I tried to pay attention to what she was saying... Something about hiring us for something? I don't know. I got that <a target="_blank" rel="noopener noreferrer" href="https://youtu.be/FoLI9FHmV90?t=170">dumb song</a> stuck in my head and wound up looking at the floor and trying to hide in my tail again. Pretty sure my sisters know exactly what I mean.</p>
+  	<p>I caught her name was Psylergus tho. I was right. Her name is Biggest Top in gobbo. I mean... I guess I could bottom for someone that cute.</p>
+  	<p>Also, Marry knows how to play Goblin Poker. Because she cheats at all games. We'll have to play some time! I hope she has enough clothes to put on for at least three hands.</p>
+  	<p>She cast a lightning spell (the big lady) and it didn't hurt me, so at least she knows I'm a tough girl!</p>
+  	<p>I think her spell failed a bit though because it made her summon monsters in a terrifying way. Guh. I don't wanna ever push anyone out of my girl bits... Those are for putting things into exclusively.</p>
+  	<p>Bob and I helped her out with medicine and bandages while the rest of us helped her guards put down her monster kids. Boy that had to be embarrassing... I'll mail her some icecream later with a note saying its okay and I get it. She dosn't know I've never had any crotch spawn, so that should be comforting to say to her.</p>
+  	<p>Anyways she really hates wood elves. Like, alot. Really a lot. More than you'd think. I mostly feel bad for them. I mean, obviously they don't have dads being elves so no one beat good manners and kindness into them. So it's not their fault they're dicks. I mean, well, not entirely.</p>
+  	<p>Don't get me wrong, even if an animal is only attacking because it was mistreated, you still gotta put a bullet into it. You should smile too! Less danger is better.</p>
+  	<p>Then she tried to cast remove curse on me even though I'm not cursed because you cant curse a bloodline. The spell failed so bad she lost an arm (its okay, her arms grow back). Everyone insisted that meant I'm super cursed, so like... I'm gonna have to buy some highschool text books to show them that's not true.</p>
+  	<p>Anyways, looks like we're double dipping on the job front by taking some jobs from Biggest Top! I'm down for that. Maybe I can do that Knight Errant thing where you have one of those romances where you don't ever really spend time with each other and pine from afar. That seems more... doable and comfortable than talking to her out of the blue and doing a date. Besides, the team's watching and might see if I went on a date.</p>
+  	<p>I shudder at the thought of being walked in on while holding hands and listening to a story.</p>
+  	<p>Anyways she wants us to check out the "scarry" gate from last time. I said I'd just crowbar it open and see what's going on but everyone seemed real upset about that. It's not like I've ever upset any door by prying them open. Doors love to open! Locks, on the other hand, hate that. But fuck locks! Locks are evil. Especially chastity belt locks.</p>
+  	<p>May the Hells reform so locks can be banished there. At least you can smash them open with a rock. Stupid locks. Those belts are fun when they're not stuck closed >:C</p>
+  	<p>A lot of discussion and planning happened next. I think she wants us to kill a specific wood elf, and the others planned for that. I didn't help much. I'm still kind worried about getting set up in time for winter, and we have tons of time to hunt down some Wood Elf. All I need to do is get a polymorph spell so I can be a gobbo on the outside too, then I walk around naked near elves and whoever I make mad is obviously the wood elf, so we shoot them.</p>
+  	<p>While they were talking I decided to gift someone we think might be Irus a 2 year subscription to Plane of Battleforge. Its the best distraction I know of! Besides, Biggest Top said Irus hates wood elves too, so maybe he's not a bad guy? Maybe they just like, think he is, and we think he is because they think he is. Stranger things have happened. Like that time I left my keys under my matress and found them in Mom's house two days later.</p>
+  	<p>You know, I really should get some kind of polymorph trinket. I wish I thought of that earlier. Ugh.</p>
+  	<p>Anyways, Biggest Top hinted she likes buff people, so I'm going to go work out! I'll bet I can find some things to fight in the Strata like usual. The others roped us into doing more music for her dolls though... Oh well, you loose some, you loose some.</p>
+  	<p>So we went back home and went to the Strata. I was kind of distracted looking for the ratties to say hello, and I don't know how but we bumped into that bandit wizard. Everyone decided to hire him. I'm not comfortable with that, but they listened to my advice on having him watched. So there's that.</p>
+  	<p>Looks like we'll be planing some proper dungeon delves over the next week or so. Hopefully not a whole month... I miss the BBQ and I still have plenty of ratty muns.</p>
+	</div>
+</div>
 
 <!--
 <div class="journal">
