--- a/stories/maevesdiary.html
+++ b/stories/maevesdiary.html
@@ -58,6 +58,7 @@
     <ol class="nested">
       <li><a href="#Day1">Entry 1</a></li>
       <li><a href="#Day2">Entry 2</a></li>
+      <li><a href="#Day3">Entry 3</a></li>
     </ol>
 </ol>
 </div>
@@ -182,6 +183,41 @@
   	<p>So we went back home and went to the Strata. I was kind of distracted looking for the ratties to say hello, and I don't know how but we bumped into that bandit wizard. Everyone decided to hire him. I'm not comfortable with that, but they listened to my advice on having him watched. So there's that.</p>
   	<p>Looks like we'll be planing some proper dungeon delves over the next week or so. Hopefully not a whole month... I miss the BBQ and I still have plenty of ratty muns.</p>
 	</div>
+</div>
+
+<div class="journal">
+  <div class="notepage">
+    <h4 id="Day3">Dear Diary,</h4>
+    <p>Today is the 30th of Frostfall. I'm sorry for not making more entries, it's just real busy! There's daily patrols and I also decided to buy an old gun factory in the nearby town. It was abandoned, but had most of the tools. I dipped a little into the ranch fund for this... But I think its worth it. I have my old idea book on me and I stated making some Cropdusters. They're selling okay.</p>
+  	<p>Those are those tube guns with the magazine. The automagic ones that just kinda spray bullets. I'm selling them to farmers mostly, since they're basically only good for putting a lot od bullets into one thing and every farmer knows what it's like to be fixing a fence and then get jumped by a dire boar.</p>
+  	<p>Anyways today we're going down into the Dungeon Strata, via Smol Boss's elevator. He built it okay but I'm worried that it's all held together with screws and pins instead of something sensible like ion tape.</p>
+  	<p>We stopped on the 8th floor, and its a nice market place! Unfortunately it was closed, so no BBQ :c. Also Numbers didn't know what pitons were. Oh by the way her name is actually the word Numbers. Which made my helmet translate it bad, because its bad and should feel bad.</p>
+  	<p>Anywho Numbers decided to loot a talking painting that feels like that creepy uncle you don't want to wear short skirts around. I guess to shoot at later? That led us to a brief encounter with a HUngry Fog. Bob got spooked real good by it and pulled out his machine pistols and just grated it to oblivion. Apparently he was the 3rd place finalist in a national competition in his home country of Norwik. I guess his interesting had to concentrate somewhere after he became an accountant.</p>
+  	<p>I found a nice power cell, one of the Constructi kind. It was stuck in a statue. Marry yelled at me for trying to dig it out... She promised she'd try to help me make some, and I need six of those for a special project. So I hope she can do so. APparently she found some plans, but I don't know how much time she has with gear forging for the whole party to help me with the cells. If it doesn't get done in 4 days, I'm coming back down and taking this cell myself.</p>
+  	<p>I looted some other machinery when she wasn't looking. Just to assert dominance. It' snot like this same thing will just reappear down here when we leave. Oh wait, it probably will.</p>
+  	<p>Next room we checked was this really cool glass ball room. I'm sad it's not on the 3rd level because it's real nice, but you can't stay down this deep safely. There was also a brain dog. Which is never a good thing. Fortunately, it was very on fire and we didn't need to do dick and or shit.</p>
+  	<p>Then, because it's the 30th, and so Theckle's on her period, we found a room with THREE MOOSE. So I threw a grenade I found earlier into it. It worked, thank all that is holy, unholey, and fun. I will be buying more grenades. I did not know moose were down here...</p>
+  	<p>Then behind the horrible moose room, there was a room with terrifying moose shaped mummies. Really don't like this floor at all. Of all the times to not have a few army regulars. I'ma gonna have to see about getting some demo guys to blow this room to hell. Maeve pushed one of the mummies over because <i>???</i>, and that woke the other up. I was going to shovel it good, but Bob decided to talk to it. And flirted. So i guess he likes undead? WHich is fine I guess. Just kinda dry and unchanging for my tastes.</p>
+  	<p>Turns out Bob wanted to see what happens if you remove one of the Strata's monsters from it. They probably jsut leave? The Ratties can just leave, so, you know.</p>
+  	<p>It fell apart though. The mummy I mean. And before Bob could take it out. So, good I guess? Nothing against mummies, but the old ones are usually jerks.</p>
+  	<p>Then we ran into a mimic, but it was one of the older ones who can talk so we let him just kinda go and live somewhere nicer. I think NUmbers gave him a job? Not sure. I was still real spooped by the moose.</p>
+  	<p>We ran into a Skin Sticher after that. I didn't get to do much really. Marry and Numbers are real powerful. Makes me wonder why they hired me on for this job, realy. I'm still glad to be here, but all I really do is shoot and hit things. I'm not a wizard, and those two can trivialize my whole job. I guess this is why people say mages are important. Each one is kinda like a platoon of good men on their own.</p>
+  	<p>I tried learning magic once. I'm not smart enough for it. Can't grock even a cantrip. But that's okay. I have a plan. Its a good plan too!</p>
+  	<p>I did get to shoot the shit out of the other thing in the Skinsticher's room tho. Which cheered me up. But shooting it made me glow... and I don't particularly like glowing I guess. I do not like it. No, ma'am. Thank goodness it stopped.</p>
+  	<p>We found the thingie we went down for... I forget what it was. I... Well I didn't care that much. I just wanted to help keep my friend safe. They don't need that though. So when we found a room that was some kind of theater storage room (you know how off the strata can be) I looted a popcorn popper so I can make some snacks and feel better later. I'll probably stick to making things they need. Or just, you know, job assignment duties.</p>
+  	<p>Its just not fair, you know? My whole job is scouting, fighting monsters, and keeping people safe. It's what I trained for. It's the one thing I was good at that's not farm stuff. They don't need me to help in these delves, but I don't think I need them for one of these delves either. I think I could do these on my own.</p>
+  	<p>I'll probably start doing them off and on again. Everyone else is... loud about this stuff. Smashing walls and doors in, talking all the time. Stomping around. I'm quiet. I can go anywhere I want without being seen.</p>
+  	<p>So I'll just slip out from time to time and see if I can do things here on my own. I'll have to subtly figure out what they want from here first though.</p>
+  	<p>On the up side, I found a ratty shop and they had some nice climbing claws. So I bought them. Still no BBQ tho :c</p>
+  	<p>Fortunately I found one of their "do not" runes, so I know roughly where their village is. I might stop by to say hello later. I'm pretty sure they wont mind since I can at least say "am friendo" in their language and also I can come back with snacks. They like snacks.</p>
+  	<p>I got to make some mouse friends though. So there's that :D !</p>
+  	<p>We had one last encounter with a thingy on the way out. I got a good shot on it and had to smack it with shovel... But that didn't kill it. I moved to the side to try and drive a spear that was stuck in it deeper into its hide. The plan worked out pretty well. Numbers and Smol Boss helped me line it up. The team work was nice.</p>
+  	<p>Kinda just followed along after that. Not sure why we kept exploring and checking. We found the thing everyone wanted to have. I think Smol boss wanted the whole floor checked out but... I'm not sure why exactly? A test of skill? If so that bar was passed like, an hour ago.</p>
+  	<p>I think I might make nice tavern on top of the hole so people could go take a break and have snacks while we're doing stuff here. Incase they get bored. I mean, Marry had a little nap after firballing the skinstitcher. I'll bet she'd have liked to go get a drink and come back.</p>
+  	<p>The last room Smol Boss wanted to check had a fucking Bebilith in it! Fortunately everyone listened to me and didn't just charge in like they had been doing. One bite from that thing and we're just doomed to die. Everyone in ABing knows that because of... reasons. We set up an ambush for it, and it worked out shockingly well. It shouldn't have. But it did. I don't like how well everything's going.</p>
+  	<p>We had to leave when a dungeon quake started. I'm glad they understand that you can't just facetank falling ceiling debris.</p>
+  	<p>Yes, I'm definitely building a tavern on the top.</p>
+  </div>
 </div>
 
 <!--
