--- a/stories/maevesdiary.html
+++ b/stories/maevesdiary.html
@@ -54,12 +54,10 @@
 <div class="storytoc" id="toc_container">
 <p class="toc_title">Contents</p>
 <ol class="toc_list">
-  <li><a href="#Month1">Fullharvest</a> </li>
-    <ol class="nested">
       <li><a href="#Day1">Entry 1</a></li>
       <li><a href="#Day2">Entry 2</a></li>
       <li><a href="#Day3">Entry 3</a></li>
-    </ol>
+      <li><a href="#Day4">Entry 4</a></li>
 </ol>
 </div>
 
@@ -219,6 +217,29 @@
   	<p>Yes, I'm definitely building a tavern on the top.</p>
   </div>
 </div>
+
+<div class="journal">
+  <div class="notepage">
+	<h4 id="Day4">Dear Diary,</h4>
+	<p>Today is the... uh... today! It's Longdark *cough cough hack cough*. Yes. Then! Anywho, had an interesting start to the day. Smol Boss insisted I try some kind of "Deep Dive" helmet. It's sort of an atheary interface... I don't like it? It has no hardware other than the helmet, but makes you feel like there is. I really don't like that at all. It's too alien from how you should use the atheiary. I guess it has some utility but... Everythings so muted, and you kinda just snap to places when you move. Also all the smells and sounds are wrong.</p>
+	<p>I didn't try it long. The stuff is just not okay.</p>
+	<p>He then insisted we trouble shoot everything tho. I helped as best I could because I'm not rude... But I think I'll stick to my slate like a normal person.</p>
+	<p>On the way out of town I stopped by the workshop. You know the constructi one I went too? That one. They hit a production snag because some law prevents them from importing construct skins, and they can't make them on site. Which is bad for any poor construct in need of some skin! I decided to sick Bob on the local gov about it. He's got enough Boromancy to make that happen, I think. He seems very powerful when he intones the dark arts of paperwork, laws, and bureaucracy. Hopefully the workshop gets to finish up soon!</p>
+	<p>We got back and checked the water filter for some black adamant dust. There was some! And also some hot metals. I'll have to make the filtration system more robust ASAP. Good thing we checked that before the day's delve.</p>
+	<p>We also stopped by a hobgobbo barrax. I didn't catch why, and I stayed outsider to guard the boats anyways. Why? Because of that stupid money we lost a few months back... That's why. Ugh, I'm still kicking myself over that.</p>
+	<p>Anyways while waiting at the vehicles I noticed some of the Hobben military's privates and BOY WERE THEY PRIVATES! Absolute losers shirking their duties, wasting the taxpayer's money. Pissed me off so much I got up and dressed them down best I could. It worked. Command voice is command voice. Got them to reorganize the entire warehouse from scratch, and had them halfway through polishing the floors with their bedding before the local sargent showed up and took over for me. We did the nod. She was grateful. No thanks necessary. SOme things must be what they must be.</p>
+	<p>And then there were more things wrong... I'm glad they didn't notice I wasn't a part of their military. I might have gotten in trouble for getting that idiot to service that poor mech's power cell with their hygiene kit otherwise. But by Theckle's god damn ears, you DO NOT leave batteries plugged into the charger so long they get DUSTY!</p>
+	<p>Anyways we started the delve and everyone seemed to like the tavern I built on top of the hole. I hope that plugging the hole dosn't bug anyone? If it does, I'll put a glass floor and ceiling in. Maybe I should do that anyways? It would be cool and thematic and other things civilians like.</p>
+	<p>The delve went better my scouting earlier helped a lot, and we were ready with grenades for the mud elementals I found... But then we ran into a room with <i>more moose!</i> So I went up topside to get my tig welder to close the door forever and ever. While I was gone, the moose demonstrated strategy. Hopefully the rest of the crew now understands that moose are actually demons and must be purged from this plane of existence or avoided like the forest fiends they are.</p>
+	<p>Anyways I scampered up the elevator shaft and got back down in time to hear the damn things trying to break down the door. Tigged the hinges and latch shut best I could. The moose got real mad.</p>
+	<p>I told everyone we should get a cleric or something to banish fiends we encounter, but no one took me seriously :c</p>
+	<p>We made our way through to the next chamber with Number's magic door knocker that can make doors and hallways and things. I like it. Its a good item. It means no moose.</p>
+	<p>We found the thingie we were after shortly after that and without incident. Amazingly everyone decided to go back up to the tavern after that to get a drink and recover from the moose encounter. I think they are becoming wiser? Hopefully that's my influence at work and not the family curse. Not that there is one, haha.</p>
+  <p>ALso Marry got me a gift! She made me a nice piercing set that let’s me be a gobbo if I wanna be! It works super well, and I can pop back and forth as much as I want! So I need to think of something very very nice for her. She likes guns and explosions, so she’s a real Lady, like me.</p>
+  <p>I think I have a few ideas.</p>
+  </div>
+</div>
+
 
 <!--
 <div class="journal">
