--- a/maps/regionmap.html
+++ b/maps/regionmap.html
@@ -11,7 +11,7 @@
 <script src="js/rulerplugin/Leaflet.LinearMeasurement.js"></script>
 <script src="js/permalink/leaflet.permalink.min.js"></script>
 <script type="text/javascript" src="pins.js"></script>
-</head><script src="../scripts/darkmode.js"></script>
+</head>
 <body style="height: 100%; margin: 0;">
 
 <div id="map" style="width: 100%; height: 100%; background: #5baef3;"></div>
@@ -160,6 +160,9 @@
 	//Add as many markers as you want below this line, but above the "</ script>". It wont break anything.
 
 	//L.marker([31.52, -23.76]).addTo(map).bindPopup('<b>Lin Forrest</b>')//.openPopup();
+	L.marker([20.71, -27.00]).addTo(map).bindPopup('<b>Shaded Vale</b>')//.openPopup();
+	L.marker([20.71, 6.21]).addTo(map).bindPopup('<b>Chicken Yas</b>')//.openPopup();
+	//L.marker([22.7046, 4.6873]).addTo(map).bindPopup('<b>The Patch</b>')//.openPopup();																											
 
 
 
