fixed people page

--- a/races/peoples.html
+++ b/races/peoples.html
@@ -91,27 +91,27 @@
 <p><a href="../races/elves.html">Êthan Elves</a> - Pasychicly adept mountain adapted Elves native to the Silver Peeks. (Page discusses many elven subspecies.)</p>
 
 <h5 class="articlesubtitle"><strong><em>Major Eyomic Peoples</em></strong></h5>
-<p><a href="../races/dwarf.html"></a>Dwarves - WIP Subterranean humanoids known for their large merchant network and leaving their suffice territories to any who wish to live there.</p>
+<p><a href="../races/dwarf.html">Dwarves</a> - Subterranian humanoids known for their large merchant network and leacing their suffirce terratories to anywho wish to live there.</p>
 <p><a href="../races/construct.html">Constructi</a> - Ancient acano-mechanical beings created by the long dead Z̚oman Empire who have become people in their own right over the ages.</p>
-<p><a href="../races/elves.html">Iron Elves</a> - Machinery obsessed elves who are some of the foremost inventors in Eyom. (Page discusses many elven subspecies.)</p>
+<p><a href="../races/elves.html">Iron Elves</a> - Machinery obsessed elves who are some of the formost invintors in Eyom. (Page discusses many elven subspecies.)</p>
 <p><a href="../races/elves.html">Wood Elves</a> - Devotees of the God Irus who carry out his will and manage one of Eyom's great empires as the masters of a thousand plantations. (Page discusses many elven subspecies.)</p>
-<p><a href="../races/gnoll.html">Gnolls</a> - Beastfolk taking the form of hyena men who embraced philosophy and banking to become the undisputed masters of Eyom's financial world.</p>
-<p><a href="../races/goblin.html">Goblins</a> - A proud nomadic tribal race with a special bond to the natural world who flirt with civilization (and everyone else), and are Eyom's undisputed masters of brewing and witchcraft.</p>
-<p><a href="../races/hobgoblins.html">Hobgoblins</a> - An offshoot of the goblin people, taller, stronger, with a particular love of combat and other physical contests.</p>
+<p><a href="../races/gnoll.html">Gnolls</a> - Beastfolk taking the form of hyena men who embraced philsophy and banking to become the undisputed masters of Eyom's financial world.</p>
+<p><a href="../races/goblin.html">Goblins</a> - A proud nomadic tribal race with a special bond to the natural world who flirt with civilization (and everyone else), and are Eyom's undispited masters of brewing and witchcraft.</p>
+<p><a href="../races/hobgoblin.html">Hobgoblins</a> - An offshoot of the goblin people, taller, stronger, with a particular love of combat and other physical contests.</p>
 <p><a href="../races/kitsune.html">Kitsune</a> - Shapeshifting fox women who form one third of the mighty Warrenese Shogunate, and were once powerful spirits before their plane was shattered in the Irisian War, transforming them into demi-mortal beings.</p>
 <p><a href="../races/rattu.html">Rattu</a> - An ancient people who survived the Irisian War at the cost of all of their civilization's progress who seek to reclaim their ancestor's glory, and are one third of the mighty Warrenese Shogunate.</p>
-<p><a href="../races/sylvin.html">Sylvin</a> - Decedents of the original 12 tribes of humans, cursed to bear the flesh of beasts, who turned their curse into a blessing.</p>
+<p><a href="../races/sylvin.html">Sylvin</a> - Decendents of the orgional 12 tribes of humans, cursed to bear the flesh of beasts, who turned their curse into a blessing.</p>
 <p><a href="../races/tanuki.html">Tanuki</a> - A proud warrior race who fought in the Irisian War, earning Irus's wrath and curse in the process. They are one third of the mighty Warrenese Shogunate.</p>
 <p><a href="../races/taur.html">Tauric Folk</a> - Humans cast out from the rest of their species due to the extent of the curse placed on their ancestors. Founders of the Dalandic Empire, Eyom's fastest growing nation and owner of the international railway.</p>
 
 <h5 class="articlesubtitle"><strong><em>Minor Eyomic Peoples</em></strong></h5>
 <p><a href="../races/elves.html">Jîve Elves</a> - A somewhat uncommon elven subspecies who are refreshingly human.</p>
-<p><a href="../races/kivu.html">Kivu</a> - Mischievous species of qazi-corporal humanoids native to nowhere who have ghost-like powers.</p>
-<p><a href="../races/kobold.html">Kobolds</a> - Small reptilian creatures with a love of trees, mining, and adventure.</p>
+<p><a href="../races/kivu.html">Kivu</a> - Myschevious species of qazi-corporal humanoids native to nowhere who have ghost-like powers.</p>
+<p><a href="../races/kobold.html">Kobolds</a> - Small reptilian cratures with a love of trees, mining, and adventure.</p>
 <p><a href="../races/quinn.html">Quinn</a> - A race of highly evolved octopi which can twist themselves into human shapes.</p>
 
 <h5 class="articlesubtitle"><strong><em>Rare Eyomic Peoples</em></strong></h5>
-<p><a href="../races/fairy.html">Fairies</a> - Common divine messengers who occasionally acquire free will.</p>
-<p><a href="../races/greyelf.html">Grey Elves</a> - A mysterious and otherworldly elven subspecies known for their artificial body parts and mysterious origins.</p>
-<p><a href="../races/succubi.html">Succubi</a> - Deamons freed from their duities to hell who now seek to protect children, and get adults to lighten the hell up in regards to many topics.</p>
+<p><a href="../races/fairy.html">Fairies</a> - Common divine messangers who occasionaly accuire free will.</p>
+<p><a href="../races/greyelf.html">Grey Elves</a> - A mysterious and otherworldly elven subspecies known for their artifical body parts and mysterious orgins.</p>
+<p><a href="../races/succubi.html">Succubi</a> - Deamons freed from their duities to hell who now seek to protect children, and get adults to lighten the hell up in reguards to many topics.</p>
 </div>
