weekly mave updoot

--- a/stories/maevesdiary.html
+++ b/stories/maevesdiary.html
@@ -58,6 +58,7 @@
       <li><a href="#Day2">Entry 2</a></li>
       <li><a href="#Day3">Entry 3</a></li>
       <li><a href="#Day4">Entry 4</a></li>
+      <li><a href="#Day5">Entry 5</a></li>
 </ol>
 </div>
 
@@ -240,6 +241,20 @@
   </div>
 </div>
 
+<div class="journal">
+  <div class="notepage">
+    <h4 id="Day5">Dear Diary,</h4>
+    <p>Not all that much happened today, but since I've been finding the time for one entry a month I'm going to go into detail anyways.</p>
+    <p>I spent the last month just working on my projects. The firearms company I started is going well, getting that foundry fixed most of the supply problems. I've also got a few millitary contracts to serve. That's going to be a bit of a problem to fufill... But I think I found a stream of revenue. A Rail Knight heard about the Cropduster, which is the only gun we're making right now. He wants a big one for his mech, but made to work underwater. I think I can get that done.</p>
+    <p>There was a band trip today. Took us over to town. We showed up in th emorning instead of at night so everyone decided to just go about their buisness. The local guard tried to shake us down on the way in, but I put some spook in them for everyone with a "We're here on buisness..." speech. I hope they don't realise I'm not part of their millitary. That could be problematic.</p>
+    <p>Everyone split up when we got into town. Smol Boss, uh, Bip, and I went to an army surplus shop and picked up some odds and ends for everyone slash the camp. We had some guards try to steal our conwagon on the way out of the shop too. I wanted to shoot them, but I didn't know how Bip wanted to handle it and potential conflict with the town guard. So I just put on "the muscile" face, made sure the scum could see my uniform's rank patches, and let Bip handle it. Handle it he did, talked them down real well.</p>
+    <p>I found out he was a captain after that... and while he dosn't seem to understand the Hellestrian tradition of respecting other armed forces as equals includes honorary ranks too, he at least understood that he could order me to treet him as an equal for th epurposes of our operation. So he did. Which is nice! It means if he dosn't recipercate I can just report that to his boss. Apaprently he's equivilent to a captain. Which is the same rank equivilence I had as a smage, but he's older so, you know. Seniority.</p>
+    <p>Anyways, Marry, Bob, and Numbers got mad about the local corruption and decided to "handle that". I stayed out of it, again, because I dont want to start amillitary conflict and I was pritty sure they were going to assasnate the mayor. Which they did.</p>
+    <p>Astonishionly, the whole town seems to be on the side of "oh thank the gods" about that, so... It will probably be covered up. If it isn't, well... I wasn't involved and no judge will think I stood a chance of stopping numbers.</p>
+    <p>They finished up with their plot in time for the consert, so we went for it. The joint we played was a nice little place called the Dive Bar. It served deep ones mostly. I think the pun is a joke about aquatic people.</p>
+    <p></p>
+  </div>
+</div>
 
 <!--
 <div class="journal">
