--- a/stories/maevesdiary.html
+++ b/stories/maevesdiary.html
@@ -252,7 +252,9 @@
     <p>Anyways, Marry, Bob, and Numbers got mad about the local corruption and decided to "handle that". I stayed out of it, again, because I dont want to start amillitary conflict and I was pritty sure they were going to assasnate the mayor. Which they did.</p>
     <p>Astonishionly, the whole town seems to be on the side of "oh thank the gods" about that, so... It will probably be covered up. If it isn't, well... I wasn't involved and no judge will think I stood a chance of stopping numbers.</p>
     <p>They finished up with their plot in time for the consert, so we went for it. The joint we played was a nice little place called the Dive Bar. It served deep ones mostly. I think the pun is a joke about aquatic people.</p>
-    <p></p>
+    <p>Anyways, we rocked so hard that a litch exploded or something? I'll be honest. I have no idea what was going on. Some tablets went boom, th elocal warlord showed up and insisted we'd blown up a litch... I don't even... Mabey I should start going with Number more? Or less. I don't want to fight a litch, actualy. They can clearly handle these things.</p>
+    <p>Then again if they run into a pack of clhenthar... Now that, that they would need me for.</p>
+    <p>You know, i'm starting to think that these mercs Silargus hired are all adventures except for me. I hope not... I don't think my poor little head could handle that kind of shenaganery.</p>
   </div>
 </div>
 
