--- a/stories/maevesdiary.html
+++ b/stories/maevesdiary.html
@@ -59,6 +59,7 @@
       <li><a href="#Day3">Entry 3</a></li>
       <li><a href="#Day4">Entry 4</a></li>
       <li><a href="#Day5">Entry 5</a></li>
+      <li><a href="#Day6">Entry 6</a></li>
 </ol>
 </div>
 
@@ -252,7 +253,34 @@
     <p>Anyways, Marry, Bob, and Numbers got mad about the local corruption and decided to "handle that". I stayed out of it, again, because I dont want to start amillitary conflict and I was pritty sure they were going to assasnate the mayor. Which they did.</p>
     <p>Astonishionly, the whole town seems to be on the side of "oh thank the gods" about that, so... It will probably be covered up. If it isn't, well... I wasn't involved and no judge will think I stood a chance of stopping numbers.</p>
     <p>They finished up with their plot in time for the consert, so we went for it. The joint we played was a nice little place called the Dive Bar. It served deep ones mostly. I think the pun is a joke about aquatic people.</p>
-    <p></p>
+    <p>Anyways, we rocked so hard that a litch exploded or something? I'll be honest. I have no idea what was going on. Some tablets went boom, th elocal warlord showed up and insisted we'd blown up a litch... I don't even... Mabey I should start going with Number more? Or less. I don't want to fight a litch, actualy. They can clearly handle these things.</p>
+    <p>Then again if they run into a pack of clhenthar... Now that, that they would need me for.</p>
+    <p>You know, i'm starting to think that these mercs Silargus hired are all adventures except for me. I hope not... I don't think my poor little head could handle that kind of shenaganery.</p>
+  </div>
+</div>
+
+<div class="journal">
+  <div class="notepage">
+    <h4 id="Day6">Dear Diary,</h4>
+    <p>Lots of routine. Who knew that starting a factory would be so time consuming and also boring. At least I managed to get the railway gun prototype finished, tested, and sent to the Rail Knights for their own testing. Hopefuly that takes off! Related, I got some mail. Helestria and the Empire both want me to supply them with Cropdusters. That's the first gun I made. I'm going to go for it. Sure, solgiers getting them means they'll be used in war, but even troops need monster portection and, well... Not like they couldn't just reverse engineer them. They've very simple guns.</p>
+    <p>Basicaly a tube.</p>
+    <p>We went to Qi̘v āwnāq today. It's a big city in Hobben! More specificly the Westhe Earldom. My sisters and I always wanted to visit Grovemont. Well this was just liek it! But bigger, and with <i>less</i> Gobs. Amazingly. Concidering were in one of their contries.</p>
+    <p>I liked how verticale the city was. You could do a climb ver gud! I'll bet the mailperson has to work real hard though. They must have a bad back from taking all the packages up the steps. I wonder if the city ever thought about hiring a second one?</p>
+    <p>Uppon reflection, larger towns probably have more mail people.</p>
+    <p>Anyways, Numbers had some friends or possibly family in town (I don't know I was distracted by thinking of climbing up this real tall building to check and see if I could swat at some of the city's airships) and she started a block party with them. I skipped out on it because I had anothe rletter from Lover's Lab. They wanted me to do a thingie, so I ya know, hadta.</p>
+    <p>Its pritty great here. They even have people in hoodes robes watching everyone. Just like home! Best poleice uniforms ever.</p>
+    <p>Anyways, I got to the university the Lab wanted me to go to and got a bit lost. One of the ollege peoples helped me find out what I was supposed to do. Apparently they wanted me to fix some tapestry for some reason? Not sure why. Like, at all. But I did. I think. It was a very alaborate confusing knotwork piece. Some kind of abstract modern art thingie. I hate those so much.</p>
+    <p>Art should be of stuff, not feelings.</p>
+    <p>Anyways, the lady who helped me got distracted by a machine, so I left without bothering her. I dont like when people bother me when I'm focused like that. So, you know.</p>
+    <p>On the way out the librarian offered to let me barrow some books. I've never been to a college before, so I kenw these would be books worth reading. I asked them for any books they had on metalic dragons, the shadow plane, and advanced construct design. They had some! Including a real friggan big book on construct design! Its heavy as hell.</p>
+    <p>What is the mass of hell anyways? It's gotta be <u>a lot</u>.</p>
+    <p>I cloaked and ran it back to the Mark 1 so no one would steal it. I made it there safe and sound and secured all of my books in the vehical's safe. Once everything was secure, I went to go find Numbers.</p>
+    <p>She was at her block party, which... I should have remembered. She talked me into helping her play even thouh I'm so bad I shattered a prop at the alst preformance. At least she likes me.</p>
+    <p>This time I played so bad that some guy exploded into a bigger dude. At least, I think that was my bad. In my defence I was pritty distracted by the city having an Elder Brain in it... So... Yeah.</p>
+    <p>Probably not coming back. Also going to go to a healer and get checked for any signs of thrallwing. Also I'm going to have to report this.</p>
+    <p>Yay... P̸̗̬̭̔̀á̶̻͖̮̮͝p̶͎̝̥̐͊̕e̵̡̠͕̓̈̈̍͜r̶͇͖̮̒w̶͕͕̟̓̅̀̚ͅo̵̗̺̽r̷̰̉́́̉k̷̗͈̒</p>
+    <h4>P.S.</h4>
+    <p>Numbers told me they allready handled the sitation. Good! No hell for Maeve today c:</p>
   </div>
 </div>
 
