--- a/stories/maevesdiary.html
+++ b/stories/maevesdiary.html
@@ -263,27 +263,26 @@
 <div class="journal">
   <div class="notepage">
     <h4 id="Day6">Dear Diary,</h4>
-    <p>Lots of routine. Who knew that starting a factory would be so time consuming and also boring. At least I managed to get the railway gun prototype finished, tested, and sent to the Rail Knights for their own testing. Hopefuly that takes off! Related, I got some mail. Helestria and the Empire both want me to supply them with Cropdusters. That's the first gun I made. I'm going to go for it. Sure, solgiers getting them means they'll be used in war, but even troops need monster portection and, well... Not like they couldn't just reverse engineer them. They've very simple guns.</p>
-    <p>Basicaly a tube.</p>
-    <p>We went to Qi̘v āwnāq today. It's a big city in Hobben! More specificly the Westhe Earldom. My sisters and I always wanted to visit Grovemont. Well this was just liek it! But bigger, and with <i>less</i> Gobs. Amazingly. Concidering were in one of their contries.</p>
-    <p>I liked how verticale the city was. You could do a climb ver gud! I'll bet the mailperson has to work real hard though. They must have a bad back from taking all the packages up the steps. I wonder if the city ever thought about hiring a second one?</p>
+    <p>Lots of routine. Who knew that starting a factory would be so time consuming and also boring. At least I managed to get the railway gun prototype finished, tested, and sent to the Rail Knights for their own testing. Hopefully that takes off! Related, I got some mail. Helestria and the Empire both want me to supply them with Cropdusters. That's the first gun I made. I'm going to go for it. Sure, soldiers getting them means they'll be used in war, but even troops need monster protection and, well... Not like they couldn't just reverse engineer them. They've very simple guns.</p>
+    <p>Basically a tube.</p>
+    <p>We went to Qi̘v āwnāq today. It's a big city in Hobben! More specifically the Westhe Earldom. My sisters and I always wanted to visit Grovemont. Well this was just like it! But bigger, and with <i>less</i> Gobs. Amazingly. Considering were in one of their countries.</p>
+    <p>I liked how verticale the city was. You could do a climb ver gud! I'll bet the mail person has to work real hard though. They must have a bad back from taking all the packages up the steps. I wonder if the city ever thought about hiring a second one?</p>
     <p>Uppon reflection, larger towns probably have more mail people.</p>
-    <p>Anyways, Numbers had some friends or possibly family in town (I don't know I was distracted by thinking of climbing up this real tall building to check and see if I could swat at some of the city's airships) and she started a block party with them. I skipped out on it because I had anothe rletter from Lover's Lab. They wanted me to do a thingie, so I ya know, hadta.</p>
-    <p>Its pritty great here. They even have people in hoodes robes watching everyone. Just like home! Best poleice uniforms ever.</p>
-    <p>Anyways, I got to the university the Lab wanted me to go to and got a bit lost. One of the ollege peoples helped me find out what I was supposed to do. Apparently they wanted me to fix some tapestry for some reason? Not sure why. Like, at all. But I did. I think. It was a very alaborate confusing knotwork piece. Some kind of abstract modern art thingie. I hate those so much.</p>
+    <p>Anyways, Numbers had some friends or possibly family in town (I don't know I was distracted by thinking of climbing up this real tall building to check and see if I could swat at some of the city's airships) and she started a block party with them. I skipped out on it because I had another letter from Lover's Lab. They wanted me to do a thingie, so I ya know, hadta.</p>
+    <p>Its pretty great here. They even have people in hooded robes watching everyone. Just like home! Best police uniforms ever.</p>
+    <p>Anyways, I got to the university the Lab wanted me to go to and got a bit lost. One of the college peoples helped me find out what I was supposed to do. Apparently they wanted me to fix some tapestry for some reason? Not sure why. Like, at all. But I did. I think. It was a very elaborate confusing knot work piece. Some kind of abstract modern art thingie. I hate those so much.</p>
     <p>Art should be of stuff, not feelings.</p>
-    <p>Anyways, the lady who helped me got distracted by a machine, so I left without bothering her. I dont like when people bother me when I'm focused like that. So, you know.</p>
-    <p>On the way out the librarian offered to let me barrow some books. I've never been to a college before, so I kenw these would be books worth reading. I asked them for any books they had on metalic dragons, the shadow plane, and advanced construct design. They had some! Including a real friggan big book on construct design! Its heavy as hell.</p>
+    <p>Anyways, the lady who helped me got distracted by a machine, so I left without bothering her. I don't like when people bother me when I'm focused like that. So, you know.</p>
+    <p>On the way out the librarian offered to let me barrow some books. I've never been to a college before, so I knew these would be books worth reading. I asked them for any books they had on metallic dragons, the shadow plane, and advanced construct design. They had some! Including a real friggan big book on construct design! Its heavy as hell.</p>
     <p>What is the mass of hell anyways? It's gotta be <u>a lot</u>.</p>
-    <p>I cloaked and ran it back to the Mark 1 so no one would steal it. I made it there safe and sound and secured all of my books in the vehical's safe. Once everything was secure, I went to go find Numbers.</p>
-    <p>She was at her block party, which... I should have remembered. She talked me into helping her play even thouh I'm so bad I shattered a prop at the alst preformance. At least she likes me.</p>
-    <p>This time I played so bad that some guy exploded into a bigger dude. At least, I think that was my bad. In my defence I was pritty distracted by the city having an Elder Brain in it... So... Yeah.</p>
-    <p>Probably not coming back. Also going to go to a healer and get checked for any signs of thrallwing. Also I'm going to have to report this.</p>
+    <p>I cloaked and ran it back to the Mark 1 so no one would steal it. I made it there safe and sound and secured all of my books in the vehicle's safe. Once everything was secure, I went to go find Numbers.</p>
+    <p>She was at her block party, which... I should have remembered. She talked me into helping her play even though I'm so bad I shattered a prop at the last performance. At least she likes me.</p>
+    <p>This time I played so bad that some guy exploded into a bigger dude. At least, I think that was my bad. In my defense I was pretty distracted by the city having an Elder Brain in it... So... Yeah.</p>
+    <p>Probably not coming back. Also going to go to a healer and get checked for any signs of thralling. Also I'm going to have to report this.</p>
     <p>Yay... P̸̗̬̭̔̀á̶̻͖̮̮͝p̶͎̝̥̐͊̕e̵̡̠͕̓̈̈̍͜r̶͇͖̮̒w̶͕͕̟̓̅̀̚ͅo̵̗̺̽r̷̰̉́́̉k̷̗͈̒</p>
     <h4>P.S.</h4>
-    <p>Numbers told me they allready handled the sitation. Good! No hell for Maeve today c:</p>
-=======
->>>>>>> 17210049cac9f15fcdfc2d78c8e794465e51f2b3
+    <p>Numbers told me they already handled the station. Good! No hell for Maeve today c:</p>
+
   </div>
 </div>
 
